k8s/deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: demo-sa
      containers:
        - name: nginx
          image: my-nginx:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
