k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: demo-sa
      containers:
        - name: nginx
          image: REPLACE_WITH_DOCKER_USERNAME/my-nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
